@@ -1,3 +1,4 @@
+* Add CSV exports into print toolbar
 * Display unread and total of notes
 * Use resources method
 * Rename roundup.url configuration to bug.url
